removed dark mode issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #1a191d;
   color: whitesmoke;
 }
 
@@ -25,15 +24,6 @@ a {
   font-size: 4rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
 
 @media screen and (max-width: 390px) 
  
